2008-06-13  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* configure.ac:
	Add --enable-gjdoc option and check
	for mkdir -p.
	* examples/Makefile.am,
	* lib/Makefile.am,
	* lib/copy-vmresources.sh.in:
	Use @MKDIR_P@.
	* tools/Makefile.am:
	Allow building GJDoc to be disabled
	and use @MKDIR_P@.

2008-06-13  Mark Wielaard  <mark@klomp.org>

	* tools/Makefile.am (USE_JAVAC_FLAGS): Use relative generated dir.
	(TOOLS_ZIP): Generate antlr output in relative dir.

2008-06-13  Mark Wielaard  <mark@klomp.org>

	* tools/Makefile.am (USE_JAVAC_FLAGS): Use generated in builddir.
	(TOOLS_JAVA_FILES): Include all .java files in all subdirs.
	(ALL_TOOLS_FILES): Include gjdoc_resources and antlr input file.
	(TOOLS_ZIP): Generate antlr output in builddir.
	* tools/resource/gnu/classpath/tools/gjdoc/htmldoclet/inherit.png:
	New file from gjdoc.

2008-06-05  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* configure.ac:
	Check for --with-glibj too when disabling
	the javac check.

2008-06-02  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* include/Makefile.am: Don't delete headers
	when not rebuilding them.

2008-06-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* configure.ac: Only regenerate headers by
	default if the headers aren't in the source tree.

2008-06-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* configure.ac: Only run javac check
	if examples, tools and/or class library are
	being built.
	* scripts/check_jni_methods.sh.in:
	Remove duplicates in the list of JNI methods
	for when builddir==srcdir.

2008-06-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* lib/Makefile.am:
	Replace explicit mkinstalldirs with $(mkinstalldirs).

2008-06-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* scripts/check_jni_methods.sh.in:
	Search the source directory as well for
	when headers are in the tarball.

2008-06-01  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am: Replace tools with
	$(TOOLSDIR).