@@ -1,3 +1,8 @@
+2008-06-15  Tom Tromey  <tromey@redhat.com>
+
+	* include/jni.h (_jobjectRefType, jobjectRefType): Always
+	declare.
+
 2008-06-13  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* configure.ac:
